--- a/css/style.css
+++ b/css/style.css
@@ -68,13 +68,13 @@ body {
 .logo {
 	color: #f6f7eb;
 	font-family: 'Parisienne';
-	font-size: 2.8rem;
+	font-size: 2.3rem;
 }
 
 .nav-logo-heb {
 	color: #f6f7eb;
 	font-family: 'Assistant', sans-serif;
-	font-size: 2.8rem;
+	font-size: 2.3rem;
 }
 
 .navbar-default .navbar-nav>li>a:link {
@@ -115,9 +115,46 @@ body {
 }
 
 .collapse.in{
-    background-color: #393e41 !important;
+    background: transparent;
+    border: none !important;
 }
 
+.collapsing {
+	background: transparent;
+    border: none !important;
+}
+
+.navbar-toggle .collapsed {
+	color: #f6f7eb;
+}
+
+.collapsed {
+	color: #f6f7eb; 
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #f6f7eb;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #f6f7eb;
+}
+
+.navbar-toggle{
+	background: transparent;
+    border: none !important;
+    color: #f6f7eb;
+}
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{
+	background-color: #393e41;
+	color: #f6f7eb;
+}
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{
+	background-color: #393e41;
+	color: #F7F7F7;
+}
 /*.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus
 .spacer{
    background-color:#f6f7eb;   
@@ -172,7 +209,7 @@ body {
 	background: linear-gradient(
       rgba(0, 0, 0, 0.5), 
       rgba(0, 0, 0, 0.5)
-    ),url("https://hd.unsplash.com/photo-1467035170010-4983895b24cd");
+    ),url("https://vita-tours.herokuapp.com/img/3.jpg");
 	background-size: cover;
 	background-position: fixed;
 }
